--- a/packages/cra-template-vista/package.json
+++ b/packages/cra-template-vista/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "cra-template",
-  "version": "1.2.0",
+  "name": "cra-template-vista",
+  "version": "1.0.0",
   "keywords": [
     "react",
     "create-react-app",
-    "template"
+    "template",
+    "vista"
   ],
-  "description": "The base template for Create React App.",
+  "description": "Vista base template for Create React App.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
-    "directory": "packages/cra-template"
+    "url": "https://github.com/erikcar/vista.git",
+    "directory": "packages/cra-template-vista"
   },
   "license": "MIT",
   "engines": {
     "node": ">=14"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/erikcar/vista/issues"
   },
   "files": [
     "template",
