--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node-terminal",
             "request": "launch",
             "name": "start template.app",
-            "command": " npm --prefix ./apps/react/template.app start "
+            "command": " npm --prefix ./packages/core start "
         },
         {
             "type": "node-terminal",
