--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,14 +23,17 @@
   },
   "homepage": "https://github.com/erikcar/vista#readme",
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
     "antd": "^4.22.3",
     "babel-loader": "^8.2.5",
-    "react": "^18.2.0",
-    "react-router-dom": "^6.3.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "peerDependencies": {
+    "@vista/core": "file:../core",
+    "react": "^18.2.0",
+    "react-router-dom": "^6.4.2"
   }
 }
